# techno-iz2

./: CMakeLists.txt  Makefile  README.md  generator.py
.github/workflows/: c.yml
cmd/: CMakeLists.txt  main.c
coverage/: collector.c.gcov  coverage.info  file.c.gcov  length_calculator.c.gcov  storage.c.gcov
coverage/collector.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  cmake_clean_target.cmake  collector.c.gcda  collector.c.gcno  depend.internal  depend.make  flags.make  link.txt
coverage/data_storage.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  cmake_clean_target.cmake  depend.internal  depend.make  flags.make  link.txt  storage.c.gcda  storage.c.gcno
coverage/file.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  file.c.gcda  file.c.gcno  flags.make  link.txt
coverage/length_calculator.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  cmake_clean_target.cmake  depend.internal  depend.make  flags.make  length_calculator.c.gcda  length_calculator.c.gcno  link.txt
coverage_ouput/: index-sort-f.html  index-sort-l.html  index.html
coverage_ouput/collector/: collector.c.func-sort-c.html  collector.c.func.html  collector.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_ouput/data_storage/: index-sort-f.html  index-sort-l.html  index.html  storage.c.func-sort-c.html  storage.c.func.html  storage.c.gcov.html
coverage_ouput/file/: file.c.func-sort-c.html  file.c.func.html  file.c.gcov.html  index-sort-f.html  index-sort-l.html  index.html
coverage_ouput/length_calculator/: index-sort-f.html  index-sort-l.html  index.html  length_calculator.c.func-sort-c.html  length_calculator.c.func.html  length_calculator.c.gcov.html
src/: CMakeLists.txt
src/collector/: CMakeLists.txt  collector.c  collector.h
src/collector/async/: CMakeLists.txt  collector.c
src/collector/sync/: CMakeLists.txt  collector.c
src/collector_parallel/: CMakeLists.txt  collector.c  collector.h
src/data_storage/: CMakeLists.txt  data_storage.c  data_storage.h  storage.c  storage.h
src/file/: CMakeLists.txt  file.c  file.h
src/input_processing/: CMakeLists.txt  processing.c  processing.h
src/length_calculator/: CMakeLists.txt  length_calculator.c  length_calculator.h
src/menu/: CMakeLists.txt  menu.c  menu.h
src/models/: CMakeLists.txt  models.c  models.h
tests/: CMakeLists.txt
tests/productivity/: CMakeLists.txt
tests/productivity/async/: CMakeLists.txt  async.c
tests/productivity/sync/: CMakeLists.txt  sync.c
tests/unit/: CMakeLists.txt
tests/unit/collector/async/: CMakeLists.txt  collector.cpp
tests/unit/collector/sync/: CMakeLists.txt  collector.cpp
tests/unit/collector/sync/data/: file.txt
tests/unit/file/: CMakeLists.txt  file.cpp
tests/unit/length_calculator/: CMakeLists.txt  length_calculator.cpp  main.cpp
tests/unit/productivity/async/: CMakeLists.txt  collector.cpp  main.cpp
tests/unit/productivity/async/data/: file.txt
tests/unit/productivity/sync/: CMakeLists.txt  collector.cpp
tests/unit/productivity/sync/data/: file.txt
tests/unit/storage/: CMakeLists.txt  storage.cpp
